name:                tag
version:             0.1.0
homepage:            https://github.com/keith/tag
license:             MIT
license-file:        LICENSE
author:              Keith Smiley
maintainer:          k@keith.so
copyright:           2017 Keith Smiley
category:            cli
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable tag
  hs-source-dirs:      bin src
  main-is:             Main.hs
  other-modules:       Ag
                     , Alias
                     , Command
                     , Commands
                     , CustomIO
                     , EditorPosition
                     , EitherUtils
                     , LineType
                     , Parser
                     , Regex
                     , RunCommand
                     , Vim
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , process == 1.4.3.0
                     , regex-pcre == 0.94.4
