name:                tag
version:             0.1.0
homepage:            https://github.com/keith/tag
license:             MIT
license-file:        LICENSE
author:              Keith Smiley
maintainer:          keithbsmiley@gmail.com
copyright:           2020 Keith Smiley
category:            cli
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Ag
                     , Alias
                     , Command
                     , Commands
                     , CustomIO
                     , EditorPosition
                     , EitherUtils
                     , LineType
                     , Parser
                     , Regex
                     , Rg
                     , RunCommand
                     , Vim
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , process == 1.4.3.0
                     , regex-pcre == 0.94.4

executable tag
  main-is:             bin/Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , process == 1.4.3.0
                     , regex-pcre == 0.94.4
                     , tag
                     , unix >= 2.7 && < 3

test-suite tag-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       AgTests
                     , RgTests
  build-depends:       base >= 4.7 && < 5
                     , HUnit == 1.5.0.0
                     , tag
